--- a/src/app/add-posts/add-posts.component.html
+++ b/src/app/add-posts/add-posts.component.html
@@ -1,7 +1,8 @@
+<app-navbar></app-navbar>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-            <div class="row g-3">
+            <div class="row g-3 mt-3">
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">User ID</label>
                     <input type="text" class="form-control">
@@ -19,7 +20,7 @@
                     <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success"></button>
+                    <button class="btn btn-success">Submit</button>
                 </div>
             </div>
         </div>
